add hero image, intro paragraph, and skill section.  update about me.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <i class="fa fa-bars fa-2x hamburger" aria-hidden="true"></i>
         <!-- un-collapsed navbar links -->
         <ul class="navbar-links">
+          <li><a href="#skills">skills</a></li>
           <li><a href="#work">Work</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -41,6 +42,7 @@
       </div>
       <!-- dropdown -->
       <ul class="dropdown-links">
+        <li><a href="#skills">skills</a></li>
         <li><a href="#work">Work</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -48,25 +50,74 @@
     </div>
 
     <!--header-->
-    <header id="top" data-aos="fade-left">
+    <header id="top">
+      <div data-aos="fade-right" class="header-text">
         <h1>Brendan Hanna</h1>
-        <p>Front-End Developer, UI & Graphic Designer</p>
+        <p>Digital Product Designer<p>
+      </div>
     </header>
 
+    <section id="intro">
+      <p data-aos="fade-left" class="lead">From research strategy to wireframes and mockups to prototyping and user testing, I've got you covered. I bridge the gap between design and code, and your users will stay front and center through the entire process.</p>
+    </section>
+
+    <section id="skills">
+      <h3 data-aos="fade-right">Skills</h3>
+      <div class="horizontal-line">
+      </div>
+      <div data-aos="fade-left" class="skills-wrapper restrain-width">
+        <div class="skill-wrapper">
+          <h4>Design</h4>
+          <ul>
+            <li>UI Design</li>
+            <li>Interaction Design</li>
+            <li>Sketch</li>
+            <li>Adobe Photoshop and Illustrator</li>
+            <li>Responsive & Mobile First Design</li>
+          </ul>
+        </div>
+        <div class="skill-wrapper">
+          <h4>Front-End Web Development</h4>
+          <ul>
+            <li>HTML5, CSS3 & Javascript</li>
+            <li>Jquery</li>
+            <li>React JS & Angular 2</li>
+            <li>CSS Preproscessors</li>
+          </ul>
+        </div>
+        <div class="skill-wrapper">
+          <h4>Workflow</h4>
+          <ul>
+            <!-- <li>Communicate seamlessly with designers, engineers, project managers and stakeholders</li> -->
+            <li>Git & Github</li>
+            <li>AGILE & SCRUM</li>
+            <li>Npm, Webpack, Gulp, Bower</li>
+            <li>Jira, Asana, Slack</li>
+            <!-- <li>Give and recieve constructive feedback</li>
+            <li>Actively engage and bring valuable information to discussions</li> -->
+          </ul>
+        </div>
+      </div>
+
+    </section>
+
     <section id="work">
+      <h3 data-aos="fade-right">WORK</h3>
+      <div class="horizontal-line">
+      </div>
       <!--mobile gallery-->
       <div id="mobile-gallery">
-        <a href="pokemon.html">
-          <div class="thumbnail" id="pokemon"  data-aos="fade-right"></div>
+        <a href="style-360.html">
+          <div class="thumbnail" id="style360" data-aos="fade-left"></div>
         </a>
         <a href="npo.html">
           <div class="thumbnail" id="npo" data-aos="fade-left"></div>
         </a>
+        <a href="pokemon.html">
+          <div class="thumbnail" id="pokemon"  data-aos="fade-right"></div>
+        </a>
         <a href="ebird.html">
           <div class="thumbnail" id="ebird" data-aos="fade-right"></div>
-        </a>
-        <a href="style-360.html">
-          <div class="thumbnail" id="style360" data-aos="fade-left"></div>
         </a>
       </div>
       <!-- /mobile gallery -->
@@ -74,19 +125,7 @@
 
       <!--desktop carousel-->
       <div class="carousel carousel-slider" data-indicators="true" id="no-touch-carousel"  data-aos="fade-right">
-        <!-- slide 1 -->
-        <div class="carousel-item" href="#one!" id="pokemon">
-          <a href="pokemon.html">
-            <div class="clear-overlay"></div>
-          </a>
-          <div class="overlay"></div>
-          <div class="slide-wrapper">
-              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-              <button class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</button>
-              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
-          </div>
-        </div>
-        <!-- slide 2 -->
+        <!-- style 360 slide -->
         <div class="carousel-item" href="#two!" id="style360">
           <a href="style-360.html">
             <div class="clear-overlay"></div>
@@ -98,7 +137,7 @@
               <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
           </div>
         </div>
-        <!-- slide 3 -->
+        <!-- npo slide -->
         <div class="carousel-item" href="#two!" id="npo">
           <a href="npo.html">
             <div class="clear-overlay"></div>
@@ -110,8 +149,19 @@
               <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
           </div>
         </div>
-        <!--/slide 3-->
-        <!-- slide 4 -->
+        <!-- pokemon slide -->
+        <div class="carousel-item" href="#one!" id="pokemon">
+          <a href="pokemon.html">
+            <div class="clear-overlay"></div>
+          </a>
+          <div class="overlay"></div>
+          <div class="slide-wrapper">
+              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
+              <button class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</button>
+              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
+          </div>
+        </div>
+        <!-- ebird slide -->
         <div class="carousel-item" href="#four!" id="ebird">
           <a href="ebird.html">
             <div class="clear-overlay"></div>
@@ -132,10 +182,10 @@
     <section id="about">
       <h3 data-aos="fade-left">About</h3>
       <div class="horizontal-line"  data-aos="fade-left"></div>
-      <div class="about-content">
+      <div class="about-content restrain-width">
         <img src="images/about-photo.png" alt="portrait of brendan hanna"  data-aos="fade-right">
         <div class="about-text"  data-aos="fade-left">
-          <p>I'm a UI designer and front-end dev passionate about combining tech with design, music and social change. Fluent in HTML, CSS and Javascript using tools like Angular, React, Sass/Less, Sketch, Invision, Photoshop & Illustrator.</p>
+          <p>I'm a Portland, OR native in my early 30's who's passionate about combining tech with design, music and social change.  Before embarking on my journey as a digital product designer, I was a music business intern for <a href="http://aristake.com/" target="blank">Ari's Take</a>, a hip hop recording class teacher with <a href="http://www.morpheusyouth.org/" target="blank">Morpheus Youth Project</a>, and a barista.</p>
           <p>I am also a hip hop artist under the name Gepetto.  As a rapper and producer, I've been active in Portland for ten years and put out three studio projects and a bunch of mixtapes and production features. Check my music out <a href="http://gepettomusic.com" target="_blank">here.</a></p>
         </div>
       </div>
