--- a/pokemon.html
+++ b/pokemon.html
@@ -55,11 +55,11 @@
       <div class="case-study" id="case-study-1">
         <div class="case-study-left">
           <div class="case-study-heading" data-aos="fade-left">
-            <a href="style-360.html">
+            <a href="npo.html">
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
             <h3>Pokemon 'Emulator'</h3>
-            <a href="npo.html">
+            <a href="ebird.html">
               <i class="fa fa-chevron-right fa-2x back-chevron"></i>
             </a>
           </div>
