--- a/style-360.html
+++ b/style-360.html
@@ -59,7 +59,7 @@
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
             <h3>Style 360</h3>
-            <a href="pokemon.html">
+            <a href="npo.html">
               <i class="fa fa-chevron-right fa-2x back-chevron"></i>
             </a>
           </div>
