change base font weight to 300, make all animations fade-up, add skills link to navbar across the board

--- a/index.html
+++ b/index.html
@@ -51,21 +51,20 @@
 
     <!--header-->
     <header id="top">
-      <div data-aos="fade-right" class="header-text">
+      <div class="header-overlay"></div>
+      <div class="header-text">
         <h1>Brendan Hanna</h1>
         <p>Digital Product Designer<p>
       </div>
     </header>
 
     <section id="intro">
-      <p data-aos="fade-left" class="lead">From research strategy to wireframes and mockups to prototyping and user testing, I've got you covered. I bridge the gap between design and code, and your users will stay front and center through the entire process.</p>
+      <p data-aos="fade-up" class="lead">From research & strategy to wireframes & mockups to prototyping & user testing, I've got you covered! I bridge the gap between design and code, keeping the user front and center through the entire process.</p>
     </section>
 
     <section id="skills">
-      <h3 data-aos="fade-right">Skills</h3>
-      <div class="horizontal-line">
-      </div>
-      <div data-aos="fade-left" class="skills-wrapper restrain-width">
+      <h3 data-aos="fade-up">Skills</h3>
+      <div data-aos="fade-up" class="skills-wrapper restrain-width">
         <div class="skill-wrapper">
           <h4>Design</h4>
           <ul>
@@ -92,7 +91,7 @@
             <li>Git & Github</li>
             <li>AGILE & SCRUM</li>
             <li>Npm, Webpack, Gulp, Bower</li>
-            <li>Jira, Asana, Slack</li>
+            <li>Asana, Slack</li>
             <!-- <li>Give and recieve constructive feedback</li>
             <li>Actively engage and bring valuable information to discussions</li> -->
           </ul>
@@ -102,29 +101,27 @@
     </section>
 
     <section id="work">
-      <h3 data-aos="fade-right">WORK</h3>
-      <div class="horizontal-line">
-      </div>
+      <h3 data-aos="fade-up">WORK</h3>
       <!--mobile gallery-->
       <div id="mobile-gallery">
         <a href="style-360.html">
-          <div class="thumbnail" id="style360" data-aos="fade-left"></div>
+          <div class="thumbnail" id="style360" data-aos="fade-up"></div>
         </a>
         <a href="npo.html">
-          <div class="thumbnail" id="npo" data-aos="fade-left"></div>
+          <div class="thumbnail" id="npo" data-aos="fade-up"></div>
         </a>
         <a href="pokemon.html">
-          <div class="thumbnail" id="pokemon"  data-aos="fade-right"></div>
+          <div class="thumbnail" id="pokemon"  data-aos="fade-up"></div>
         </a>
         <a href="ebird.html">
-          <div class="thumbnail" id="ebird" data-aos="fade-right"></div>
+          <div class="thumbnail" id="ebird" data-aos="fade-up"></div>
         </a>
       </div>
       <!-- /mobile gallery -->
 
 
       <!--desktop carousel-->
-      <div class="carousel carousel-slider" data-indicators="true" id="no-touch-carousel"  data-aos="fade-right">
+      <div class="carousel carousel-slider" data-indicators="true" id="no-touch-carousel"  data-aos="fade-up">
         <!-- style 360 slide -->
         <div class="carousel-item" href="#two!" id="style360">
           <a href="style-360.html">
@@ -179,12 +176,11 @@
     </section>
 
     <!--about section-->
-    <section id="about">
-      <h3 data-aos="fade-left">About</h3>
-      <div class="horizontal-line"  data-aos="fade-left"></div>
+    <section id="about" data-aos="fade-up">
+      <h3>About</h3>
       <div class="about-content restrain-width">
-        <img src="images/about-photo.png" alt="portrait of brendan hanna"  data-aos="fade-right">
-        <div class="about-text"  data-aos="fade-left">
+        <img src="images/about-photo.png" alt="portrait of brendan hanna">
+        <div class="about-text">
           <p>I'm a Portland, OR native in my early 30's who's passionate about combining tech with design, music and social change.  Before embarking on my journey as a digital product designer, I was a music business intern for <a href="http://aristake.com/" target="blank">Ari's Take</a>, a hip hop recording class teacher with <a href="http://www.morpheusyouth.org/" target="blank">Morpheus Youth Project</a>, and a barista.</p>
           <p>I am also a hip hop artist under the name Gepetto.  As a rapper and producer, I've been active in Portland for ten years and put out three studio projects and a bunch of mixtapes and production features. Check my music out <a href="http://gepettomusic.com" target="_blank">here.</a></p>
         </div>
@@ -192,7 +188,7 @@
     </section>
 
     <!-- contact section -->
-    <section class="light-bg" id="contact" data-aos="fade-up">
+    <section class="light-bg" id="contact">
       <h3>Contact</h3>
 
       <form action="https://formspree.io/brendanhannadev@gmail.com" method="POST">
