--- a/npo.html
+++ b/npo.html
@@ -30,9 +30,10 @@
         <a href="index.html#top" id="nav-logo">
           <img src="images/small-box-logo.png" alt="BH logo">
         </a>
-        <i class="fa fa-bars hamburger fa-2x" aria-hidden="true"></i>
+        <i class="fa fa-bars fa-2x hamburger" aria-hidden="true"></i>
         <!-- un-collapsed navbar links -->
         <ul class="navbar-links">
+          <li><a href="index.html#skills">Skills</a></li>
           <li><a href="index.html#work">Work</a></li>
           <li><a href="index.html#about">About</a></li>
           <li><a href="index.html#contact">Contact</a></li>
@@ -40,11 +41,13 @@
       </div>
       <!-- dropdown -->
       <ul class="dropdown-links">
+        <li><a href="index.html#skills">Skills</a></li>
         <li><a href="index.html#work">Work</a></li>
         <li><a href="index.html#about">About</a></li>
         <li><a href="index.html#contact">Contact</a></li>
       </ul>
     </div>
+
     <!--case study (initially hidden off screen) -->
     <div class="case-studies">
       <!-- back -->
@@ -54,16 +57,16 @@
       <!--case study-->
       <div class="case-study" id="case-study-1">
         <div class="case-study-left">
-          <div class="case-study-heading" data-aos="fade-left">
-            <a href="pokemon.html">
+          <div class="case-study-heading">
+            <a href="style-360.html">
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
             <h3>Non Profit Donator</h3>
-            <a href="ebird.html">
+            <a href="pokemon.html">
               <i class="fa fa-chevron-right fa-2x back-chevron"></i>
             </a>
           </div>
-          <div class="case-study-text" data-aos="fade-right">
+          <div class="case-study-text">
             <div class="case-study-bullets">
               <div class="case-study-bullets-left">
                 <p><strong>Role:</strong> UX design</p>
@@ -78,7 +81,8 @@
             </div>
             <!--/bullets-->
             <div class="case-study-paragraph">
-              <p>The vision for this app is to have a streamlined experience where the user can easily customize and automate donations to Non Profit Organizations, as well as curate which organizations they see content from.</p>
+              <p>This is an invision prototype — a clickable mockup — of a mobile app for donating to Non Profit Organizations, and it also has a social component where you can see updates from organizations and users of your choice.</p>
+              <p>The idea is to have a personalized hub for engaging with, and donating to, a curated list of causes you care about.  That way you can focus on what really matters.</p>
               <!-- <p>The app will include an interactive map to search NPOs, the ability to invite NPOs to join the platform and thus be able to receive automated donations, and a dashboard where they can manage recurring or one-time donations.  Stretch goals include a social media micro-platform where users can interact with organizations and other users.</p> -->
             </div>
           </div>
