--- a/style-360.html
+++ b/style-360.html
@@ -30,9 +30,10 @@
         <a href="index.html#top" id="nav-logo">
           <img src="images/small-box-logo.png" alt="BH logo">
         </a>
-        <i class="fa fa-bars hamburger fa-2x" aria-hidden="true"></i>
+        <i class="fa fa-bars fa-2x hamburger" aria-hidden="true"></i>
         <!-- un-collapsed navbar links -->
         <ul class="navbar-links">
+          <li><a href="index.html#skills">Skills</a></li>
           <li><a href="index.html#work">Work</a></li>
           <li><a href="index.html#about">About</a></li>
           <li><a href="index.html#contact">Contact</a></li>
@@ -40,11 +41,13 @@
       </div>
       <!-- dropdown -->
       <ul class="dropdown-links">
+        <li><a href="index.html#skills">Skills</a></li>
         <li><a href="index.html#work">Work</a></li>
         <li><a href="index.html#about">About</a></li>
         <li><a href="index.html#contact">Contact</a></li>
       </ul>
     </div>
+
     <!--case study (initially hidden off screen) -->
     <div class="case-studies">
       <!-- back -->
@@ -54,7 +57,7 @@
       <!--case study-->
       <div class="case-study" id="case-study-1">
         <div class="case-study-left">
-          <div class="case-study-heading" data-aos="fade-left">
+          <div class="case-study-heading" >
             <a href="ebird.html">
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
@@ -63,7 +66,7 @@
               <i class="fa fa-chevron-right fa-2x back-chevron"></i>
             </a>
           </div>
-          <div class="case-study-text" data-aos="fade-right">
+          <div class="case-study-text">
             <div class="case-study-bullets">
               <div class="case-study-bullets-left">
                 <p><strong>Company:</strong> SightWorks</p>
@@ -80,7 +83,8 @@
             </div>
             <!--/bullets-->
             <div class="case-study-paragraph">
-              <p>As an intern at SightWorks, I helped build the UI for a responsive landing page for hair stylists in need of a web presence.  I took the lead in learning React JS and brought useful information to the team on how to implement it.</p>
+              <p>SightWorks needed a prototype of their new product, Style 360, built in React JS, a technology they hadn't used yet.  As their intern, I took PSD mockups and turned them into a pixel-perfect UI, which was then handed off to the senior dev to integrate it into their AWS-powered engine.</p>
+              <p>I took initiative on learning React JS and helping my team implement it, played a deciding role in discussions on tooling, and communicated effectively with my co-intern, project manager, the senior developer and the technical and creative directors.</p>
             </div>
           </div>
         </div>
@@ -106,7 +110,7 @@
               </div>
             </div>
             <!--content tablet and up -->
-            <div class="case-study-content display-on-tablet" data-aos="fade-up">
+            <div class="case-study-content display-on-tablet" >
               <img src="images/style360-1.PNG" alt="screenshot of style360 project" class="screenshot">
               <img src="images/style360-2.PNG" alt="screenshot of style360 project" class="screenshot">
               <img src="images/style360-3.PNG" alt="screenshot of style360 project" class="screenshot">
