--- a/ebird.html
+++ b/ebird.html
@@ -33,6 +33,7 @@
         <i class="fa fa-bars fa-2x hamburger" aria-hidden="true"></i>
         <!-- un-collapsed navbar links -->
         <ul class="navbar-links">
+          <li><a href="index.html#skills">Skills</a></li>
           <li><a href="index.html#work">Work</a></li>
           <li><a href="index.html#about">About</a></li>
           <li><a href="index.html#contact">Contact</a></li>
@@ -40,6 +41,7 @@
       </div>
       <!-- dropdown -->
       <ul class="dropdown-links">
+        <li><a href="index.html#skills">Skills</a></li>
         <li><a href="index.html#work">Work</a></li>
         <li><a href="index.html#about">About</a></li>
         <li><a href="index.html#contact">Contact</a></li>
@@ -54,8 +56,8 @@
       <!--case study-->
       <div class="case-study" id="case-study-1">
         <div class="case-study-left">
-          <div class="case-study-heading" data-aos="fade-left">
-            <a href="npo.html">
+          <div class="case-study-heading" ="fade-left">
+            <a href="pokemon.html">
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
             <h3>Early Bird Tees</h3>
@@ -63,7 +65,7 @@
               <i class="fa fa-chevron-right fa-2x back-chevron"></i>
             </a>
           </div>
-          <div class="case-study-text" data-aos="fade-right">
+          <div class="case-study-text">
             <div class="case-study-bullets">
               <div class="case-study-bullets-left">
                 <p><strong>Company:</strong> Proper Knocks Record Label</p>
@@ -94,7 +96,7 @@
               </div>
             </div> -->
             <!--'content' (screenshots) -->
-            <div class="case-study-content" data-aos="fade-up">
+            <div class="case-study-content">
               <img src="images/ebird.jpg" alt="early bird tee shirt design" class="screenshot">
               <!--back-to-top arrow-->
               <!-- <div class="to-top-desktop">
