--- a/pokemon.html
+++ b/pokemon.html
@@ -30,9 +30,10 @@
         <a href="index.html#top" id="nav-logo">
           <img src="images/small-box-logo.png" alt="BH logo">
         </a>
-        <i class="fa fa-bars hamburger fa-2x" aria-hidden="true"></i>
+        <i class="fa fa-bars fa-2x hamburger" aria-hidden="true"></i>
         <!-- un-collapsed navbar links -->
         <ul class="navbar-links">
+          <li><a href="index.html#skills">Skills</a></li>
           <li><a href="index.html#work">Work</a></li>
           <li><a href="index.html#about">About</a></li>
           <li><a href="index.html#contact">Contact</a></li>
@@ -40,11 +41,13 @@
       </div>
       <!-- dropdown -->
       <ul class="dropdown-links">
+        <li><a href="index.html#skills">Skills</a></li>
         <li><a href="index.html#work">Work</a></li>
         <li><a href="index.html#about">About</a></li>
         <li><a href="index.html#contact">Contact</a></li>
       </ul>
     </div>
+
     <!--case study (initially hidden off screen) -->
     <div class="case-studies">
       <!-- back -->
@@ -54,7 +57,7 @@
       <!--case study-->
       <div class="case-study" id="case-study-1">
         <div class="case-study-left">
-          <div class="case-study-heading" data-aos="fade-left">
+          <div class="case-study-heading">
             <a href="npo.html">
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
@@ -63,7 +66,7 @@
               <i class="fa fa-chevron-right fa-2x back-chevron"></i>
             </a>
           </div>
-          <div class="case-study-text" data-aos="fade-right">
+          <div class="case-study-text">
             <div class="case-study-bullets">
               <div class="case-study-bullets-left">
                 <p><strong>Role:</strong> Javascript Development</p>
@@ -91,7 +94,7 @@
               </div>
             </div>
             <!--'content' (screenshots) -->
-            <div class="case-study-content" data-aos="fade-up">
+            <div class="case-study-content">
               <img src="images/pokemon-1.PNG" alt="screenshot of style360 project" class="screenshot">
               <img src="images/pokemon-2.PNG" alt="screenshot of style360 project" class="screenshot">
               <img src="images/pokemon-3.PNG" alt="screenshot of style360 project" class="screenshot">
