adjust subheader sizing on hero

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <div class="about-content restrain-width">
         <img src="images/about-photo.png" alt="portrait of brendan hanna">
         <div class="about-text">
-          <p>I'm a Portland, OR native in my early 30's who's passionate about combining tech with design, music and social change.  Before embarking on my journey as a digital product designer, I was a music business intern for <a href="http://aristake.com/" target="blank">Ari's Take</a>, a hip hop recording class teacher with <a href="http://www.morpheusyouth.org/" target="blank">Morpheus Youth Project</a>, and a barista.</p>
+          <p>I'm passionate about combining tech with design, music and social change.  Before embarking on my journey as a digital product designer, I was a music business intern for <a href="http://aristake.com/" target="blank">Ari's Take</a>, a hip hop recording class teacher with <a href="http://www.morpheusyouth.org/" target="blank">Morpheus Youth Project</a>, and a barista.</p>
           <p>I am also a hip hop artist under the name Gepetto.  As a rapper and producer, I've been active in Portland for ten years and put out three studio projects and a bunch of mixtapes and production features. Check my music out <a href="http://gepettomusic.com" target="_blank">here.</a></p>
         </div>
       </div>
