change out early bird tee for graphic design case study

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <a href="pokemon.html">
           <div class="thumbnail" id="pokemon"  data-aos="fade-up"></div>
         </a>
-        <a href="ebird.html">
+        <a href="graphic-design.html">
           <div class="thumbnail" id="ebird" data-aos="fade-up"></div>
         </a>
       </div>
@@ -160,7 +160,7 @@
         </div>
         <!-- ebird slide -->
         <div class="carousel-item" href="#four!" id="ebird">
-          <a href="ebird.html">
+          <a href="graphic-design.html">
             <div class="clear-overlay"></div>
           </a>
           <div class="overlay"></div>
@@ -206,7 +206,9 @@
 
     <!-- footer-->
     <footer class="light-bg">
-      <a href="https://github.com/gepetto503" target="_blank">Github</a>
+      <a href="https://github.com/gepetto503" target="_blank">
+      <i class="fa fa-github fa-2x"></i></a>
+      <a href="https://twitter.com/brendanhannadev?lang=en" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
     </footer>
 
 
