--- a/pokemon.html
+++ b/pokemon.html
@@ -62,7 +62,7 @@
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
             <h3>Pokemon 'Emulator'</h3>
-            <a href="ebird.html">
+            <a href="graphic-design.html">
               <i class="fa fa-chevron-right fa-2x back-chevron"></i>
             </a>
           </div>
@@ -118,7 +118,9 @@
 
     <!-- footer-->
     <footer class="light-bg">
-      <a href="https://github.com/gepetto503" target="_blank">Github</a>
+      <a href="https://github.com/gepetto503" target="_blank">
+      <i class="fa fa-github fa-2x"></i></a>
+      <a href="https://twitter.com/brendanhannadev?lang=en" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
     </footer>
     <!--materialize js cdn-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
