--- a/npo.html
+++ b/npo.html
@@ -131,7 +131,9 @@
 
     <!-- footer-->
     <footer class="light-bg">
-      <a href="https://github.com/gepetto503" target="_blank">Github</a>
+      <a href="https://github.com/gepetto503" target="_blank">
+      <i class="fa fa-github fa-2x"></i></a>
+      <a href="https://twitter.com/brendanhannadev?lang=en" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
     </footer>
     <!--materialize js cdn-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
