--- a/style-360.html
+++ b/style-360.html
@@ -58,7 +58,7 @@
       <div class="case-study" id="case-study-1">
         <div class="case-study-left">
           <div class="case-study-heading" >
-            <a href="ebird.html">
+            <a href="graphic-design.html">
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
             <h3>Style 360</h3>
@@ -134,7 +134,9 @@
 
     <!-- footer-->
     <footer class="light-bg">
-      <a href="https://github.com/gepetto503" target="_blank">Github</a>
+      <a href="https://github.com/gepetto503" target="_blank">
+      <i class="fa fa-github fa-2x"></i></a>
+      <a href="https://twitter.com/brendanhannadev?lang=en" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
     </footer>
     <!--materialize js cdn-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
