new thumbnail gallery and portfolio case study added

--- a/index.html
+++ b/index.html
@@ -59,120 +59,88 @@
     </header>
 
     <section id="intro">
-      <p data-aos="fade-up" class="lead">From research & strategy to wireframes & mockups to prototyping & user testing, I've got you covered! I bridge the gap between design and code, keeping the user front and center through the entire process.</p>
+      <p data-aos="fade-up" class="lead">I bridge the gap between design and code, keeping the user front and center through the entire process.
+      <br><br>Think of me as a UX designer with a background in graphic design who can code -- I love making apps and websites that look great and give the user what they want when they want it.</p>
     </section>
 
     <section id="skills">
       <h3 data-aos="fade-up">Skills</h3>
       <div data-aos="fade-up" class="skills-wrapper restrain-width">
         <div class="skill-wrapper">
-          <h4>Design</h4>
+          <h4>Visual Design</h4>
           <ul>
             <li>UI Design</li>
-            <li>Interaction Design</li>
-            <li>Sketch</li>
-            <li>Adobe Photoshop and Illustrator</li>
-            <li>Responsive & Mobile First Design</li>
+            <li>Graphic Design</li>
+            <li>Sketch, Photoshop and Illustrator</li>
+            <li></li>
           </ul>
         </div>
         <div class="skill-wrapper">
-          <h4>Front-End Web Development</h4>
+          <h4>Web Development</h4>
           <ul>
             <li>HTML5, CSS3 & Javascript</li>
-            <li>Jquery</li>
-            <li>React JS & Angular 2</li>
+            <li>Jquery, React JS & Angular 2</li>
             <li>CSS Preproscessors</li>
           </ul>
         </div>
         <div class="skill-wrapper">
-          <h4>Workflow</h4>
+          <h4>UX</h4>
           <ul>
-            <!-- <li>Communicate seamlessly with designers, engineers, project managers and stakeholders</li> -->
-            <li>Git & Github</li>
-            <li>AGILE & SCRUM</li>
-            <li>Npm, Webpack, Gulp, Bower</li>
-            <li>Asana, Slack</li>
-            <!-- <li>Give and recieve constructive feedback</li>
-            <li>Actively engage and bring valuable information to discussions</li> -->
+            <li>Design Strategy</li>
+            <li>Wireframing</li>
+            <li>Prototyping</li>
+            <li>Usability Testing</li>
           </ul>
         </div>
       </div>
 
     </section>
 
-    <section id="work">
-      <h3 data-aos="fade-up">WORK</h3>
-      <!--mobile gallery-->
-      <div id="mobile-gallery">
-        <a href="style-360.html">
-          <div class="thumbnail" id="style360" data-aos="fade-up"></div>
+    <section id="work" data-aos="fade-up">
+      <h3>WORK</h3>
+      <div class="work-gallery">
+
+        <a href="portfolio.html">
+          <div class="work-thumbnail" id="portfolio">
+            <div class="work-thumb-overlay">
+            </div>
+            <div class="work-thumb-info">
+              <h5>Portfolio Website</h5>
+              <p>UX/UI Design & Development</p>
+            </div>
+          </div>
         </a>
         <a href="npo.html">
-          <div class="thumbnail" id="npo" data-aos="fade-up"></div>
+          <div class="work-thumbnail" id="npo">
+            <div class="work-thumb-overlay">
+            </div>
+            <div class="work-thumb-info">
+              <h5>Non Profit Donator</h5>
+              <p>Invision Prototype</p>
+            </div>
+          </div>
         </a>
-        <a href="pokemon.html">
-          <div class="thumbnail" id="pokemon"  data-aos="fade-up"></div>
+        <a href="style-360.html">
+          <div class="work-thumbnail" id="style360">
+            <div class="work-thumb-overlay">
+            </div>
+            <div class="work-thumb-info">
+              <h5>Style 360</h5>
+              <p>React JS Development</p>
+            </div>
+          </div>
         </a>
-        <a href="graphic-design.html">
-          <div class="thumbnail" id="ebird" data-aos="fade-up"></div>
+        <a href="proper-knocks.html">
+          <div class="work-thumbnail" id="proper-knocks">
+            <div class="work-thumb-overlay">
+            </div>
+            <div class="work-thumb-info">
+              <h5>Proper Knocks</h5>
+              <p>Digital & Print Design</p>
+            </div>
+          </div>
         </a>
       </div>
-      <!-- /mobile gallery -->
-
-
-      <!--desktop carousel-->
-      <div class="carousel carousel-slider" data-indicators="true" id="no-touch-carousel"  data-aos="fade-up">
-        <!-- style 360 slide -->
-        <div class="carousel-item" href="#two!" id="style360">
-          <a href="style-360.html">
-            <div class="clear-overlay"></div>
-          </a>
-          <div class="overlay"></div>
-          <div class="slide-wrapper">
-              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-              <button class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</button>
-              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
-          </div>
-        </div>
-        <!-- npo slide -->
-        <div class="carousel-item" href="#two!" id="npo">
-          <a href="npo.html">
-            <div class="clear-overlay"></div>
-          </a>
-          <div class="overlay"></div>
-          <div class="slide-wrapper">
-              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-              <button class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</button>
-              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
-          </div>
-        </div>
-        <!-- pokemon slide -->
-        <div class="carousel-item" href="#one!" id="pokemon">
-          <a href="pokemon.html">
-            <div class="clear-overlay"></div>
-          </a>
-          <div class="overlay"></div>
-          <div class="slide-wrapper">
-              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-              <button class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</button>
-              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
-          </div>
-        </div>
-        <!-- ebird slide -->
-        <div class="carousel-item" href="#four!" id="ebird">
-          <a href="graphic-design.html">
-            <div class="clear-overlay"></div>
-          </a>
-          <div class="overlay"></div>
-          <div class="slide-wrapper">
-              <i class="fa fa-chevron-left fa-2x white-text carousel-prev"></i>
-              <button class="waves-effect waves-light btn-large white black-text view-proj-btn">view project</button>
-              <i class="fa fa-chevron-right fa-2x white-text carousel-next"></i>
-          </div>
-        </div>
-        <!--/slide 4-->
-      </div>
-      <!--/desktop carousel-->
     </section>
 
     <!--about section-->
@@ -181,7 +149,7 @@
       <div class="about-content restrain-width">
         <img src="images/about-photo.png" alt="portrait of brendan hanna">
         <div class="about-text">
-          <p>I'm passionate about combining tech with design, music and social change.  Before embarking on my journey as a digital product designer, I was a music business intern for <a href="http://aristake.com/" target="blank">Ari's Take</a>, a hip hop recording class teacher with <a href="http://www.morpheusyouth.org/" target="blank">Morpheus Youth Project</a>, and a barista.</p>
+          <p>I'm passionate about combining design and tech with music and social change.  Before embarking on my journey as a digital product designer, I was a music business intern for <a href="http://aristake.com/" target="blank">Ari's Take</a>, a hip hop recording class teacher with <a href="http://www.morpheusyouth.org/" target="blank">Morpheus Youth Project</a>, and a barista.</p>
           <p>I am also a hip hop artist under the name Gepetto.  As a rapper and producer, I've been active in Portland for ten years and put out three studio projects and a bunch of mixtapes and production features. Check my music out <a href="http://gepettomusic.com" target="_blank">here.</a></p>
         </div>
       </div>
@@ -209,6 +177,8 @@
       <a href="https://github.com/gepetto503" target="_blank">
       <i class="fa fa-github fa-2x"></i></a>
       <a href="https://twitter.com/brendanhannadev?lang=en" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="https://www.instagram.com/brendandesignsstuff/" target="blank">
+      <i class="fa  fa-2x fa-instagram"></i></a>
     </footer>
 
 
