--- a/npo.html
+++ b/npo.html
@@ -58,11 +58,11 @@
       <div class="case-study" id="case-study-1">
         <div class="case-study-left">
           <div class="case-study-heading">
-            <a href="style-360.html">
+            <a href="portfolio.html">
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
             <h3>Non Profit Donator</h3>
-            <a href="pokemon.html">
+            <a href="style-360.html">
               <i class="fa fa-chevron-right fa-2x back-chevron"></i>
             </a>
           </div>
@@ -81,8 +81,8 @@
             </div>
             <!--/bullets-->
             <div class="case-study-paragraph">
-              <p>This is an invision prototype — a clickable mockup — of a mobile app for donating to Non Profit Organizations, and it also has a social component where you can see updates from organizations and users of your choice.</p>
-              <p>The idea is to have a personalized hub for engaging with, and donating to, a curated list of causes you care about.  That way you can focus on what really matters.</p>
+              <p>This is a clickable prototype of a mobile app for donating to Non Profit Organizations, along with a social media micro-platform where you see updates from organizations and users of your choice.</p>
+              <p>This ability for users to simplify and personalize their engagement, making them more likely to engage and donate!</p>
               <!-- <p>The app will include an interactive map to search NPOs, the ability to invite NPOs to join the platform and thus be able to receive automated donations, and a dashboard where they can manage recurring or one-time donations.  Stretch goals include a social media micro-platform where users can interact with organizations and other users.</p> -->
             </div>
           </div>
