--- a/style-360.html
+++ b/style-360.html
@@ -58,11 +58,11 @@
       <div class="case-study" id="case-study-1">
         <div class="case-study-left">
           <div class="case-study-heading" >
-            <a href="graphic-design.html">
+            <a href="npo.html">
               <i class="fa fa-chevron-left fa-2x back-chevron"></i>
             </a>
             <h3>Style 360</h3>
-            <a href="npo.html">
+            <a href="proper-knocks.html">
               <i class="fa fa-chevron-right fa-2x back-chevron"></i>
             </a>
           </div>
