update intro copy

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
     </header>
 
     <section id="intro">
-      <p data-aos="fade-up" class="lead">I bridge the gap between design and code, keeping the user front and center through the entire process.
-      <br><br>Think of me as a UX designer with a background in graphic design who can code -- I love making apps and websites that look great and give the user what they want when they want it.</p>
+      <p data-aos="fade-up" class="lead">From research & conceptualization to wireframing & hi fidelity mocks to prototyping & user testing...<br><br> I bridge the gap between design and code, keeping the user front and center through the entire process.</p>
     </section>
 
     <section id="skills">
