--- a/npo.html
+++ b/npo.html
@@ -134,6 +134,8 @@
       <a href="https://github.com/gepetto503" target="_blank">
       <i class="fa fa-github fa-2x"></i></a>
       <a href="https://twitter.com/brendanhannadev?lang=en" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>
+      <a href="https://www.instagram.com/brendandesignsstuff/" target="blank">
+      <i class="fa  fa-2x fa-instagram"></i></a>
     </footer>
     <!--materialize js cdn-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
