remove hover state on touch screen devices

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </header>
 
     <section id="intro">
-      <p data-aos="fade-up" class="lead">From research & conceptualization to wireframing & hi fidelity mocks to prototyping & user testing...<br><br> I bridge the gap between design and code, keeping the user front and center through the entire process.</p>
+      <p data-aos="fade-up" class="lead">I have a breadth of skills from print design to front end development in React JS, but web design and UX are my superpowers!<br><br>Open to freelance, contract or full time opportunities in Portland, OR or remote.</p>
     </section>
 
     <section id="skills">
