--- a/npo.html
+++ b/npo.html
@@ -107,9 +107,9 @@
               </div>
             </div>
             <div class="case-study-content display-on-tablet">
-              <img src="images/npo-1.png" alt="screenshot of non profit donator project" class="first screenshot">
+              <img src="images/npo-1.png" alt="images/npo-1.png" class="first screenshot">
               <img src="images/npo-donator.png" alt="screenshot of non profit donator project 2" class="screenshot">
-              <img src="images/npo-3.png" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo-3.png" alt="images/npo-3.png" class="screenshot">
               <div class="to-top-desktop">
                 <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
                 <p>top</p>
