add npo folder for images, change image paths

--- a/npo.html
+++ b/npo.html
@@ -97,19 +97,19 @@
             </div>
             <!--'content' (screenshots) -->
             <div class="case-study-content display-on-mobile">
-              <img src="images/npo-mobile-4.png" alt="screenshot of non profit donator project" class="first screenshot">
-              <img src="images/npo-mobile-1.png" alt="screenshot of non profit donator project" class="screenshot">
-              <img src="images/npo-mobile-2.png" alt="screenshot of non profit donator project" class="screenshot">
-              <img src="images/npo-mobile-3.png" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo/npo-mobile-4.png" alt="screenshot of non profit donator project" class="first screenshot">
+              <img src="images/npo/npo-mobile-1.png" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo/npo-mobile-2.png" alt="screenshot of non profit donator project" class="screenshot">
+              <img src="images/npo/npo-mobile-3.png" alt="screenshot of non profit donator project" class="screenshot">
               <div class="to-top-desktop">
                 <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
                 <p>top</p>
               </div>
             </div>
             <div class="case-study-content display-on-tablet">
-              <img src="images/npo-1.png" alt="images/npo-1.png" class="first screenshot">
-              <img src="images/npo-donator.png" alt="screenshot of non profit donator project 2" class="screenshot">
-              <img src="images/npo-3.png" alt="images/npo-3.png" class="screenshot">
+              <img src="images/npo/npo-1.png" alt="images/npo/npo-1.png" class="first screenshot">
+              <img src="images/npo/npo-donator.png" alt="screenshot of non profit donator project 2" class="screenshot">
+              <img src="images/npo/npo-3.png" alt="images/npo/npo-3.png" class="screenshot">
               <div class="to-top-desktop">
                 <i class="fa fa-chevron-up fa-2x" aria-hidden="true"></i>
                 <p>top</p>
